<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/act_bg_color">

    <TextView
        android:id="@+id/tvPlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/play"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintDimensionRatio="1:0.13"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/delete_btn"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintDimensionRatio="1:0.13"
        app:layout_constraintTop_toBottomOf="@+id/tvPlay" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintDimensionRatio="1:0.13"
        app:layout_constraintTop_toBottomOf="@+id/tvDelete" />
</androidx.constraintlayout.widget.ConstraintLayout>