<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.693">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_user_name_dialog_bg"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/add_mistakes_collection"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="50dp"
                android:background="@color/indicator_color"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etDialogContent"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="89dp"
                android:background="@null"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:hint="@string/edit_mistakes_collection_name_hint"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/edit_text_hint_color"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@color/indicator_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDialogContent" />

            <TextView
                android:background="@drawable/input_user_name_dialog_btn_bg"
                android:id="@+id/tvDialogKnow"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="47dp"
                android:gravity="center"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/etDialogContent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>