<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_mistake_bg"
        tools:context=".ui.main.mistakes.AddMistakeActivity">

        <include
            android:id="@+id/mToolBarContainer"
            layout="@layout/common_tool_bar_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/act_bg_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mToolBarContainer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etMistakeContent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/white"
                    android:gravity="start"
                    android:hint="@string/edit_mistake_content_hint"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintDimensionRatio="1:0.458"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mMistakeImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/etMistakeContent">

                    <TextView
                        android:id="@+id/tvMistakeImages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/mistake_pictures"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mRecyclerViewMistake"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/tvMistakeImages" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/etMistakeAnswerContent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:gravity="start"
                    android:hint="@string/edit_mistake_answer_content_hint"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintDimensionRatio="1:0.458"
                    app:layout_constraintTop_toBottomOf="@+id/mMistakeImages" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mMistakeAnswerImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/etMistakeAnswerContent">

                    <TextView
                        android:id="@+id/tvMistakeAnswerImages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/mistake_answer_pictures"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mRecyclerViewMistakeAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/tvMistakeAnswerImages" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/etMistakeRemarkContent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:gravity="start"
                    android:hint="@string/edit_mistake_remark_content_hint"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintDimensionRatio="1:0.458"
                    app:layout_constraintTop_toBottomOf="@+id/mMistakeAnswerImages" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>