<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_act_main_bg"
        tools:context=".ui.main.setting.ChangePasswordActivity">

        <include
            android:id="@+id/mToolBarContainer"
            layout="@layout/common_tool_bar_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPasswordOld"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:hint="@string/edit_password_old_hint"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/edit_text_hint_color"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mToolBarContainer" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/edit_text_indicator_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordOld" />

        <EditText
            android:id="@+id/etPasswordNew"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:hint="@string/edit_password_new_hint"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/edit_text_hint_color"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordOld" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/edit_text_indicator_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordNew" />

        <EditText
            android:id="@+id/etPasswordRepeat"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:hint="@string/edit_password_repeat_hint"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/edit_text_hint_color"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordNew" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/edit_text_indicator_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordRepeat" />

        <TextView
            android:id="@+id/tvSure"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/act_register_btn_bg"
            android:gravity="center"
            android:text="@string/change"
            android:textColor="@color/act_class_query_btn_text_color"
            android:textSize="18sp"
            app:layout_constraintDimensionRatio="1:0.15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordRepeat"
            app:layout_constraintWidth_percent="0.78" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>